<resources>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="app_name">微信</string>
    <string name="txt_tab_message">微信</string>
    <string name="icon_tab_message">微信—图标</string>
    <string name="txt_tab_contact">通讯录</string>
    <string name="icon_tab_contact">通讯录-图标</string>
    <string name="txt__tab_find">发现</string>
    <string name="icon_tab_find">发现-图标</string>
    <string name="txt_tab_config">我</string>
    <string name="icon_tab_config">我-图标</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="not_found">not found</string>
    <string name="last_time">1970年01月01日</string>
    <string name="appbar_scrolling_view_behavior">add a swiper for item.</string>

</resources>