<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.WeChat.MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:background="@color/besideBackground"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/tab_message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/icon_tab_message"
                android:src="@drawable/ic_message" />

            <TextView
                android:id="@+id/txt_tab_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_tab_message"
                android:textColor="@color/color_common" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_contact"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/icon_tab_contact"
                android:src="@drawable/ic_concat" />

            <TextView
                android:id="@+id/txt_tab_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_tab_contact"
                android:textColor="@color/color_common" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_find"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_find"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/icon_tab_find"
                android:src="@drawable/ic_find" />

            <TextView
                android:id="@+id/txt_tab_find"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt__tab_find"
                android:textColor="@color/color_common" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_config"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_config"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/icon_tab_config"
                android:src="@drawable/ic_config" />

            <TextView
                android:id="@+id/txt_tab_config"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_tab_config"
                android:textColor="@color/color_common" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>